Fix sub-path: SCRIPT_NAME tells PHP about /meb/ prefix

--- a/docker/nginx/magicqc.conf
+++ b/docker/nginx/magicqc.conf
@@ -10,12 +10,13 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    # PHP-FPM
+    # PHP-FPM — SCRIPT_NAME tells Laravel it's running under /meb/ sub-path
     location ~ \.php$ {
         fastcgi_pass magicqc_app:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param REQUEST_URI $request_uri;
+        fastcgi_param SCRIPT_NAME /meb/index.php;
+        fastcgi_param REQUEST_URI /meb$request_uri;
         include fastcgi_params;
         fastcgi_buffering off;
     }
