Fix: include fastcgi_params BEFORE custom overrides

--- a/docker/nginx/magicqc.conf
+++ b/docker/nginx/magicqc.conf
@@ -14,10 +14,12 @@ server {
     location ~ \.php$ {
         fastcgi_pass magicqc_app:9000;
         fastcgi_index index.php;
+
+        # Include defaults FIRST, then override with our sub-path values
+        include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param SCRIPT_NAME /meb/index.php;
         fastcgi_param REQUEST_URI /meb$request_uri;
-        include fastcgi_params;
         fastcgi_buffering off;
     }
 
