Fix sub-path deployment: revert to proxy-strip, fix Inertia URL client-side, isolate session cookies
- Revert bootstrap/app.php to standard routing (no /meb prefix)
- Revert Nginx to simple config (no alias, no @php named location)
- Add Inertia router.on('before') interceptor to prepend basePath to all URLs
- Fix session cookies: SESSION_PATH=/meb, SESSION_COOKIE=magicqc_session, SESSION_DRIVER=file
- Revert login page form URLs to simple paths

--- a/docker/nginx/magicqc.conf
+++ b/docker/nginx/magicqc.conf
@@ -5,37 +5,25 @@ server {
     root /var/www/html/public;
     index index.php;
 
-    # All requests come in with /meb/ prefix from the WordPress proxy.
-    # Strip /meb prefix and serve from public directory.
-    location /meb/ {
-        alias /var/www/html/public/;
-        try_files $uri $uri/ @php;
-
-        # Static assets caching
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 30d;
-            add_header Cache-Control "public, immutable";
-        }
+    # Handle all requests through Laravel
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
-    # Fallback to PHP for Inertia/Laravel routes
-    location @php {
-        fastcgi_pass magicqc_app:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME /var/www/html/public/index.php;
-        fastcgi_param REQUEST_URI $request_uri;
-        fastcgi_buffering off;
-    }
-
-    # Direct PHP access (fallback)
+    # PHP-FPM processing
     location ~ \.php$ {
         fastcgi_pass magicqc_app:9000;
         fastcgi_index index.php;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME /var/www/html/public/index.php;
-        fastcgi_param REQUEST_URI $request_uri;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_buffering off;
+    }
+
+    # Static assets caching
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 30d;
+        add_header Cache-Control "public, immutable";
+        try_files $uri =404;
     }
 
     # Deny access to hidden files
