--- a/.env.production
+++ b/.env.production
@@ -2,8 +2,7 @@ APP_NAME=MagicQC
 APP_ENV=production
 APP_KEY=
 APP_DEBUG=false
-APP_URL=https://robionix.com/meb
-ASSET_URL=https://robionix.com/meb
+APP_URL=http://121.52.149.158:8080
 
 LOG_CHANNEL=stack
 LOG_LEVEL=error
@@ -17,10 +16,6 @@ DB_PASSWORD="magicqc@123"
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-SESSION_PATH=/meb
-SESSION_DOMAIN=robionix.com
-SESSION_SECURE_COOKIE=true
-SESSION_COOKIE=magicqc_session
 
 CACHE_STORE=file
 QUEUE_CONNECTION=database
@@ -29,4 +24,4 @@ MAIL_MAILER=log
 
 # Python annotation tool (generate via: php artisan api:generate-key)
 ANNOTATION_API_KEY=
-API_BASE_URL=https://robionix.com/meb
+API_BASE_URL=http://121.52.149.158:8080
