--- a/.env.production
+++ b/.env.production
@@ -1,11 +1,12 @@
 APP_NAME=MagicQC
 APP_ENV=production
 APP_KEY=
-APP_DEBUG=false
-APP_URL=http://121.52.149.158:8080
+APP_DEBUG=true
+APP_URL=https://robionix.com/meb
+ASSET_URL=https://robionix.com/meb
 
 LOG_CHANNEL=stack
-LOG_LEVEL=error
+LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=db
@@ -16,6 +17,7 @@ DB_PASSWORD="magicqc@123"
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SESSION_COOKIE=magicqc_session
 
 CACHE_STORE=file
 QUEUE_CONNECTION=database
@@ -24,4 +26,4 @@ MAIL_MAILER=log
 
 # Python annotation tool (generate via: php artisan api:generate-key)
 ANNOTATION_API_KEY=
-API_BASE_URL=http://121.52.149.158:8080
+API_BASE_URL=https://robionix.com/meb
