--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -14,6 +14,7 @@ services:
         condition: service_healthy
     networks:
       - magicqc_net
+      - wordpress_net
 
   db:
     image: mysql:5.7
@@ -38,8 +39,6 @@ services:
     image: nginx:alpine
     container_name: magicqc_nginx
     restart: unless-stopped
-    ports:
-      - "8080:80"
     volumes:
       - ./docker/nginx/magicqc.conf:/etc/nginx/conf.d/default.conf:ro
       - app_public:/var/www/html/public:ro
@@ -47,6 +46,7 @@ services:
       - app
     networks:
       - magicqc_net
+      - wordpress_net
 
 volumes:
   app_storage:
@@ -57,3 +57,6 @@ volumes:
 networks:
   magicqc_net:
     driver: bridge
+  wordpress_net:
+    external: true
+    name: robionix_wordpress_network
