--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,8 @@ services:
         working_dir: /var/www
         volumes:
             - ./:/var/www
-        networks:
-            - magicqc_network
-            - robionix_default # Shared network with existing project
+            - /var/www/vendor # Preserve vendor from image
+            - /var/www/node_modules # Preserve node_modules from image
 
     nginx:
         image: nginx:alpine
@@ -23,6 +22,8 @@ services:
             - "8081:80" 
         volumes:
             - ./:/var/www
+            - /var/www/vendor # Preserve vendor from image
+            - /var/www/node_modules # Preserve node_modules from image
             - ./docker/nginx/conf.d:/etc/nginx/conf.d
         networks:
             - magicqc_network
@@ -57,6 +58,8 @@ services:
         command: php artisan queue:work --tries=3 --timeout=90
         volumes:
             - ./:/var/www
+            - /var/www/vendor # Preserve vendor from image
+            - /var/www/node_modules # Preserve node_modules from image
         networks:
             - magicqc_network
         depends_on:
