--- a/docker/host-nginx/magicqc-proxy.conf
+++ b/docker/host-nginx/magicqc-proxy.conf
@@ -7,7 +7,8 @@ server {
     }
 
     location / {
-        proxy_pass http://magicqc_nginx:80;
+        # Proxy via Docker bridge gateway to magicqc_nginx on host port 8081
+        proxy_pass http://172.17.0.1:8081;
 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
