Fix: Use HTTP for APP_URL until SSL is configured

--- a/production.env.example
+++ b/production.env.example
@@ -2,7 +2,7 @@ APP_NAME="MagicQC"
 APP_ENV=production
 APP_KEY=base64:/N8lv8URx009Qindrk7XRuiJTVk7/8QnWpclDJ6/FYY=
 APP_DEBUG=false
-APP_URL=https://magicqc.online
+APP_URL=http://magicqc.online
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -40,7 +40,7 @@ MAIL_FROM_ADDRESS="abdullahsaleem75911@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 # Fix for https behind proxy
-ASSET_URL=https://magicqc.online
+ASSET_URL=http://magicqc.online
 # Trust all proxies (since we are behind Nginx)
 TRUSTPROXIES=*
 
