--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,10 @@
 /node_modules
 /public/hot
 /public/storage
+/public/build
 /storage/*.key
 /vendor
+/bootstrap/cache/*.php
 /.idea
 /.vscode
 /.git
