--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 .env.production
 .phpactor.json
 .phpunit.result.cache
+.deploy.lock
+.last_sync_hash
 Homestead.json
 Homestead.yaml
 npm-debug.log
