--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,14 @@ services:
         volumes:
             - ./:/var/www
         depends_on:
-            - db
+            db:
+                condition: service_healthy
+        healthcheck:
+            test: ["CMD-SHELL", "php-fpm-healthcheck || kill -0 1"]
+            interval: 30s
+            timeout: 5s
+            retries: 3
+            start_period: 30s
 
     nginx:
         image: nginx:alpine
@@ -36,6 +43,12 @@ services:
             MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
         volumes:
             - dbdata:/var/lib/mysql
+        healthcheck:
+            test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-p${DB_PASSWORD}"]
+            interval: 30s
+            timeout: 5s
+            retries: 5
+            start_period: 30s
 
     worker:
         image: magicqc-app
@@ -46,8 +59,10 @@ services:
         volumes:
             - ./:/var/www
         depends_on:
-            - app
-            - db
+            app:
+                condition: service_healthy
+            db:
+                condition: service_healthy
 
 networks:
     robionix_default:
